timeRangeInputView: stop hiding overflow

--- a/less/acorn-player.less
+++ b/less/acorn-player.less
@@ -577,7 +577,6 @@ input {
 .time-range-input-view {
   margin-top: -10px;
   width: 538px;
-  overflow: hidden;
   .gradient(#ffffff, #e6e6e6, #ffffff);
   .transition(0.35s, ease);
 
